--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,7 @@
+@import '../../theme/tailwind.css';
+@import '../../module/menu/menu.scss';
+@import 'ant-design-vue/dist/antd.css';
+
 * {
   box-sizing: border-box;
   margin: 0;
