--- a/src/module/menu/menu.scss
+++ b/src/module/menu/menu.scss
@@ -1,5 +1,5 @@
 .menu_container {
-  background-color: rgba($color: #000000, $alpha: 0.3);
+  // background-color: rgba($color: #000000, $alpha: 0.3);
   position: relative;
   height: 100%;
   width: 100%;
